Some progress: under 100 compile erros now